# chess_opengl

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Camera.h  Piece.h  Shader.h  SpriteSheet.h
include/glad/: glad.h
res/shaders/: highlight.vert  promotionPiece.frag  vShader.vert
src/: Board.cpp  Piece.cpp  Shader.cpp  SpriteSheet.cpp  dimWindow.frag  fShader.frag  glad.c  highlight.frag  highlight.vert  main.cpp  piece.frag  piece.vert  promotion.frag  promotion.vert  promotionPiece.frag  promotionPiece.vert  vShader.vert
